--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
+    "cache-loader": "^4.1.0",
     "element-ui": "^2.11.0",
     "iview": "^3.5.4",
     "mavon-editor": "^2.6.17",
-    "style-loader": "^3.3.1",
     "vue": "^2.6.10",
     "vue-cropperjs": "^3.0.0",
     "vue-i18n": "^8.10.0",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.3",
     "vue-schart": "^2.0.0",
+    "vue-select-image": "^1.9.0",
     "vuedraggable": "^2.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-service": "^5.0.6",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "stylus": "^0.58.1",
+    "stylus-loader": "^7.0.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.46.0"
+    "webpack": "^5.0.0"
   }
 }
